--- a/pokedex/assets/css/global.css
+++ b/pokedex/assets/css/global.css
@@ -1,11 +1,24 @@
-*{
+* {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
-.content{
+body{
+    background-color: #f6f8fc;
+}
+
+.content {
     padding: 1rem;
+    height: 100vh;
+    width: 100vw;
+    background-color: #fff;
 }
 
-.content h1{
-    margin: 0;
+@media screen and (min-width: 992px){
+    .content{
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
 }
