--- a/pokedex/assets/css/pokedex.css
+++ b/pokedex/assets/css/pokedex.css
@@ -6,21 +6,103 @@
     padding: 0;
 }
 
+.normal {
+    background-color: #a6a877;
+}
+
+.grass {
+    background-color: #77c850;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.eletric {
+    background-color: #f7cf2e;
+}
+
+.ice {
+    background-color: #98d5d7;
+}
+
+.ground {
+    background-color: #dfbf69;
+}
+
+.flying {
+    background-color: #a98ff0;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+.fighting {
+    background-color: #bf3029;
+}
+
+.psychic {
+    background-color: #f65687;
+}
+
+.dark {
+    background-color: #725847;
+}
+
+.rock {
+    background-color: #b8a137;
+}
+
+.bug {
+    background-color: #a8b720;
+}
+
+.ghost {
+    background-color: #6e5896;
+}
+
+.steel {
+    background-color: #b9b7cf;
+}
+
+.dragon {
+    background-color: #6f38f6;
+}
+
+.fairy {
+    background-color: #f9aec7;
+}
+
+
+
+
+
+
+
+
+
+
+
 .pokemon {
     margin: .5rem;
     padding: 2rem 1rem;
-    background-color: #49d0b0;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
 }
 
-.pokemon .name{
+.pokemon .name {
     color: #fff;
     margin-bottom: 0;
+    text-transform: capitalize;
 }
 
-.pokemon .number{
+.pokemon .number {
     color: #000;
     text-align: right;
     opacity: 0.3;
@@ -33,16 +115,17 @@
     list-style: none;
 }
 
-.pokemon .detail .types .type{
-    background-color: #61e1ca;
+.pokemon .detail .types .type {
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
 }
 
-.pokemon .detail{
+.pokemon .detail {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -56,20 +139,20 @@
 }
 
 
-@media screen and (min-width: 380px){
-    .pokemons{
+@media screen and (min-width: 380px) {
+    .pokemons {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 576px){
-    .pokemons{
+@media screen and (min-width: 576px) {
+    .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 992px){
-    .pokemons{
+@media screen and (min-width: 992px) {
+    .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
