--- a/pokedex/assets/css/pokedex.css
+++ b/pokedex/assets/css/pokedex.css
@@ -22,7 +22,7 @@
     background-color: #678fee;
 }
 
-.eletric {
+.electric {
     background-color: #f7cf2e;
 }
 
@@ -78,16 +78,6 @@
     background-color: #f9aec7;
 }
 
-
-
-
-
-
-
-
-
-
-
 .pokemon {
     margin: .5rem;
     padding: 2rem 1rem;
@@ -133,9 +123,28 @@
 }
 
 .pokemon .detail img {
-    max-width: 100%;
+    max-width: 80%;
     height: 100px;
     align-self: flex-end;
+}
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button {
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    color: #fff; 
+    padding: .25rem .5rem;
+    font-size: .625rem;
+    margin: .25rem 0;
 }
 
 
